# ship-position

./: .gitignore  BN880GPSConfig.hpp  BN880GPSReader.cpp  BN880GPSReader.hpp  CMakeLists.txt  Config.cpp  Config.hpp  GPSReader.hpp  HMC5883LReader.cpp  HMC5883LReader.hpp  IPCClient.cpp  IPCClient.hpp  IPCConfig.hpp  IPCMessages.hpp  Log.cpp  Log.hpp  MagnetometerReader.hpp  MethodWrapper.hpp  NMEAParser.cpp  NMEAParser.hpp  QMC5883LConfig.hpp  QMC5883LReader.cpp  QMC5883LReader.hpp  ShipPosition.cpp  ShipPosition.hpp  SingleThread.cpp  SingleThread.hpp  UnixListener.cpp  UnixListener.hpp  main.cpp  ship-position.conf
test/: Config_test.cpp  NMEAParser_test.cpp  UnixListener_test.cpp  main.cpp  testconfig.conf
